# jigsaw-solver

./: CMakeLists.txt  Edge.cpp  Edge.h  EdgeMatcher.cpp  GeometryHelpers.cpp  GeometryHelpers.h  PieceClassifier.cpp  PieceData.cpp  PieceData.h  README.md  Segmenter.cpp
