cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
add_executable( Segmenter Segmenter.cpp PieceData.cpp )
add_executable( PieceClassifier PieceClassifier.cpp PieceData.cpp )
target_link_libraries( Segmenter ${OpenCV_LIBS} )
target_link_libraries( PieceClassifier ${OpenCV_LIBS} )
