cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
SET(CMAKE_CXX_FLAGS "-std=c++0x")
add_executable( Segmenter Segmenter.cpp PieceData.cpp )
add_executable( PieceClassifier PieceClassifier.cpp PieceData.cpp )
add_executable( EdgeMatcher EdgeMatcher.cpp PieceData.cpp )
target_link_libraries( Segmenter ${OpenCV_LIBS} )
target_link_libraries( PieceClassifier ${OpenCV_LIBS} )
target_link_libraries( EdgeMatcher ${OpenCV_LIBS} )
